--- a/.vimrc.config
+++ b/.vimrc.config
@@ -14,3 +14,5 @@ let g:indent_guides_auto_colors=0
 let g:indent_guides_color_change_percent = 30
 " ガイドの幅
 let g:indent_guides_guide_size = 1
+" endwise.vim
+let g:endwise_no_mappings=1
